# homework_evm

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
lab1_mySimpleComputer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  constantsRegisterFlags.h  homeworks_evm  main.c  mySimpleComputer.c  mySimpleComputer.h
lab2_consoleSC/: CMakeLists.txt  Makefile  main.c  myTerms.c  myTerms.h
lab3_myBigChars/: Makefile  bc_bigcharread.c  bc_bigcharwrite.c  bc_box.c  bc_getbigcharpos.c  bc_printA.c  bc_printbigchar.c  bc_setbigcharpos.c  getBigChar.c  main.c  myBigChars.c  myBigChars.h
lab4_myReadKey/: Makefile  main.c  myReadkey.h  rk_mytermregime.c  rk_mytermrestore.c  rk_mytermsave.c  rk_readkey.c
lab4_myReadKey/Terminal/: accumulator.c  inputMemoryCell.c  inputNum.c  instructionCounter.c  keyHandler.c  moveSelector.c  myPrint.c  operation.c  printTerminalAllBox.c  printTerminalBigChars.c  printTerminalFlags.c  printTerminalMemory.c  selector.c  setDefaultString.c  terminal.h
lab4_myReadkey/: Makefile  main.c  myReadkey.h  rk_mytermregime.c  rk_mytermrestore.c  rk_mytermsave.c
lab5_signals/: Makefile  main.c  signals.c  signals.h  signals123.c
lab6_hdd/: Makefile  hdd.c  hdd.h  main.c
other/: myTerminal.c
